--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       LAN: 0
       RETAKES: 0
     volumes:
-      - csgo-data
+      - csgo-data:/home/steam/csgo
     network_mode: "host"
     restart: unless-stopped
     stdin_open: true
