--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     container_name: csgo
     build: .
     environment:
-      SERVER_HOSTNAME: "csgo.prakharshukla.com"
+      SERVER_HOSTNAME: "PUV - CSGO"
       SERVER_PASSWORD: ${CSGO_SERVER_PASSWORD}
       RCON_PASSWORD: ${CSGO_RCON_PASSWORD}
       STEAM_ACCOUNT: ${CSGO_STEAM_ACCOUNT}
