refactor sourcemod admin names

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       RCON_PASSWORD: ${CSGO_RCON_PASSWORD}
       STEAM_ACCOUNT: ${CSGO_STEAM_ACCOUNT}
       AUTHKEY: ${CSGO_AUTH_KEY}
-      SOURCEMOD_ADMINS: prafiles,vishalculty
+      SOURCEMOD_ADMINS: ${CSGO_SOURCEMOD_ADMIN}
       IP: 0.0.0.0
       PORT: 27015
       TV_PORT: 27020
