--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,8 +19,8 @@ services:
       FPS_MAX: 300
       GAME_TYPE: 0
       GAME_MODE: 0
-      MAP: de_dust2
-      MAPGROUP: mg_active
+      MAP: de_dust2,de_assault
+      MAPGROUP: mg_active,mg_reserve,mg_hostage
       MAXPLAYERS: 12
       TV_ENABLE: 1
       LAN: 0
